--- a/src/components/BoutonMenu/BoutonMenu.css
+++ b/src/components/BoutonMenu/BoutonMenu.css
@@ -1,5 +1,4 @@
 .menu-btn-container {
-    position: fixed;
     width: 1.5em;
     height: 1.5em;
     z-index: 20;
@@ -8,26 +7,23 @@
 }
 
 #menu-btn-ext {
-    position: absolute;
     width: 100%;
-    transition: transform 0.7s, scale 0.3s;
-    pointer-events: none;
+    transition: var(--bouton-menu-circulaire-transition);
+    pointer-events: var(--bouton-menu-circulaire-pointer-event);
 }
 
 #menu-btn-int {
-    position: absolute;
     width: 74%;
     top: 13%;
     left: 13%;
-    transition: transform 0.7s, scale 0.3s;
-    pointer-events: none;
+    transition: var(--bouton-menu-circulaire-transition);
+    pointer-events: var(--bouton-menu-circulaire-pointer-event);
 }
 
 #menu-btn-centre {
-    position: absolute;
     width: 160%;
     top: -30%;
     left: -30%;
-    transition: transform 0.7s, scale 0.3s;
-    pointer-events: none;
+    transition: var(--bouton-menu-circulaire-transition);
+    pointer-events: var(--bouton-menu-circulaire-pointer-event);
 }
