--- a/src/components/BoutonMenuClassique/BoutonMenuClassique.css
+++ b/src/components/BoutonMenuClassique/BoutonMenuClassique.css
@@ -1,11 +1,10 @@
 /* bouton hamburger -------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 .hamburger {
-    position: fixed;
-    top: 1em;
-    left: 1em;
-    width: 1.5em;
-    height: 1.5em;
+    top: 1rem;
+    left: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
     z-index: 20;
 }
 
@@ -13,23 +12,25 @@
     padding: 0;
     width: 100%;
     height: 10%;
-    background-color: rgba(255, 255, 255, 1);
-    box-shadow: 0 0 0.2em 0.1em rgba(40, 187, 194, 0.7);
+    background-color: var(--bouton-menu-classique-color);
     display: block;
-    border-radius: 0.25em;
+    border-radius: 0.25rem;
     transition: all 0.2s ease-in-out;
     position: absolute;
 }
 
 #bar1 {
     top: 5%;
+    box-shadow: var(--bouton-menu-classique-shadow);
 }
 
 #bar2,
 #bar3 {
     top: 45%;
+    box-shadow: var(--bouton-menu-classique-shadow-midrange);
 }
 
 #bar4 {
     bottom: 5%;
+    box-shadow: var(--bouton-menu-classique-shadow);
 }
