--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,9 +1,8 @@
 #menu {
-    position: absolute;
     top: -102vh;
     height: 100vh;
     width: 100vw;
-    background: rgba(0, 0, 0, 0.8);
+    background: var(--menu-background-color);
     z-index: 10;
     transition: all 0.5s;
 }
