--- a/src/components/OngletMenu/OngletMenu.css
+++ b/src/components/OngletMenu/OngletMenu.css
@@ -1,16 +1,10 @@
 .link-menu {
-    font-size: 1.5em;
-    font-weight: 600;
-    color: #fff;
-    text-shadow:
-        0 0 0.1rem rgba(40, 187, 194, 1),
-        0 0 0.25rem rgba(40, 187, 194, 0.9),
-        0 0 0.5rem rgba(40, 187, 194, 0.7),
-        0 0 2rem rgba(40, 187, 194, 0.5);
+    font-size: var(--onglet-menu-font-size);
+    font-weight: var(--onglet-menu-font-wheight);
+    color: var(--main-font-color);
+    text-shadow: var(--onglet-menu-text-shadow);
 }
 
 #liste-menu {
-    display: flex;
-    flex-direction: column;
     gap: 1.5em;
 }
