--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -106,6 +106,11 @@ a {
     align-items: center;
 }
 
+.space-around {
+    justify-content: space-around;
+    align-items: center;
+}
+
 .relative {
     position: relative;
 }
