--- a/src/components/Banniere/Banniere.css
+++ b/src/components/Banniere/Banniere.css
@@ -6,9 +6,9 @@
 #container-video-banniere {
     overflow: hidden;
     z-index: 1;
-    width: 104vw;
-    left: -2vw;
-    height: calc(100vw * 9 / 32);
+    width: 130vw;
+    left: -15vw;
+    aspect-ratio: 16/9;
 }
 
 #video-banniere {
@@ -17,7 +17,7 @@
 }
 
 #img-banniere {
-    top: -7vw;
+    top: 10vw;
     left: -2vw;
     width: 104vw;
     z-index: 2;
@@ -26,7 +26,7 @@
 
 #logo-banniere {
     width: 30vw;
-    top: 20vw;
+    top: 35vw;
     left: 35%;
     z-index: 3;
     mask-image: var(--banniere-logo-gradient-masque);
