Premiere version date et heure
Ajout contenu bloc Info

ajout artefact programmation

Ajout contenu billetterie

ajout contenu Partenaires

Ajout composant bouton

--- a/src/components/AccueilContainer/AccueilContainer.css
+++ b/src/components/AccueilContainer/AccueilContainer.css
@@ -5,6 +5,10 @@
     padding: 1rem;
 }
 
+.accueil-container h1 {
+    margin-bottom: 1em;
+}
+
 .accueil-container::after {
     content: "";
     position: absolute;
