--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -10,9 +10,18 @@
     --main-font-family: "Merriweather Sans", sans-serif;
     --main-font-size: 14px;
 
-    --title-font-family: "Kufam", sans-serif;
-    --title-font-wheight: 600;
+    --title-font-family: "Days One", sans-serif;
+    --title-font-wheight: 400;
     --title-font-size: 2em;
+
+    --texte-flashy-font-family: "Orbitron", sans-serif;
+    --texte-flashy-font-wheight: 600;
+    --texte-flashy-font-size: 3.8em;
+    --texte-flashy-text-shadow: var(--texte-flashy-text-shadow-size) var(--texte-flashy-text-shadow-size) 0 rgba(var(--shadow-color), 1),
+        calc(var(--texte-flashy-text-shadow-size) * -1) var(--texte-flashy-text-shadow-size) 0 rgba(var(--shadow-color), 1),
+        calc(var(--texte-flashy-text-shadow-size) * -1) calc(var(--texte-flashy-text-shadow-size) * -1) 0 rgba(var(--shadow-color), 1),
+        var(--texte-flashy-text-shadow-size) calc(var(--texte-flashy-text-shadow-size) * -1) 0 rgba(var(--shadow-color), 1);
+    --texte-flashy-text-shadow-size: 4px;
 
     --onglet-menu-font-size: 1.5em;
     --onglet-menu-font-wheight: 600;
@@ -86,6 +95,14 @@ a {
     display: block;
 }
 
+.inline {
+    display: inline;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
 .center {
     justify-content: center;
     align-items: center;
@@ -125,14 +142,14 @@ a {
 
 /* Media Queries */
 
-@media (min-width: 768px) {
+@media (width >=768px) {
     body {
         font-size: calc(var(--main-font-size) + 4px);
         /* Tablet */
     }
 }
 
-@media (min-width: 1024px) {
+@media (width >=1024px) {
     body {
         font-size: calc(var(--main-font-size) + 6px);
         /* Desktop */
