--- a/src/components/AccueilBilleterie/AccueilBilletterie.css
+++ b/src/components/AccueilBilleterie/AccueilBilletterie.css
@@ -1,7 +1,7 @@
 #grille-billetterie {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: auto;
+    grid-template-rows: auto;
     background-color: rgba(var(--shadow-color), 1);
     gap: 0.2em;
     padding: 0.2em;
