--- a/src/components/AccueilContainer/AccueilContainer.css
+++ b/src/components/AccueilContainer/AccueilContainer.css
@@ -1,5 +1,4 @@
 .accueil-container {
-    position: relative;
     background-color: var(--container-background-color);
     height: 100%;
     width: 100%;
@@ -8,6 +7,7 @@
 
 .accueil-container h1 {
     margin: 0 0 1em 0;
+    text-transform: uppercase;
 }
 
 .border-accueil-container {
