--- a/src/components/AccueilPartenaire/AccueilPartenaires.css
+++ b/src/components/AccueilPartenaire/AccueilPartenaires.css
@@ -1,7 +1,7 @@
 #grille-partenaire {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(auto, 1fr);
+    grid-template-columns: repeat(max(3), 1fr);
+    grid-template-rows: repeat(auto-fill, 1fr);
     background-color: rgba(var(--shadow-color), 1);
     gap: 0.4em;
     padding: 0.4em;
@@ -13,12 +13,7 @@
 
 @media (width >=768px) {
     #grille-partenaire {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(auto, 1fr);
-        background-color: rgba(var(--shadow-color), 1);
-        gap: 0.4em;
-        padding: 0.4em;
+        grid-template-columns: repeat(max(6), 1fr);
     }
 
     .logo-partenaire-accueil {
