--- a/src/components/EncartDate/EncartDate.css
+++ b/src/components/EncartDate/EncartDate.css
@@ -13,6 +13,7 @@
 
 .encart-date div {
     color: transparent;
+    text-transform: uppercase;
     font-family: var(--texte-flashy-font-family);
     font-weight: var(--texte-flashy-font-wheight);
     font-size: var(--texte-flashy-font-size);
