--- a/src/components/Erreur/Erreur.css
+++ b/src/components/Erreur/Erreur.css
@@ -1,7 +1,7 @@
 #erreur {
     width: 100vw;
     height: 100vh;
-    background-image: url("/src/assets/images/erreur404.png");
+    background-image: url("/src/assets/images/erreur404.webp");
     background-size: cover;
     background-position: center;
     color: #BC1180;
