--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,23 +1,23 @@
 #footer {
     width: 100vw;
-    aspect-ratio: 5/1;
+    min-height: fit-content;
+    padding: 2em 0 2em 0;
 }
-
 
 #bordure-footer {
     width: 100vw;
-    aspect-ratio: 50/1;
+    height: 2em;
     z-index: 0;
-    top: -0.5em;
-    background: linear-gradient(0deg, rgba(40, 187, 194, 0) 0%, rgba(40, 187, 194, 1) 40%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
+    top: -1em;
+    background: var(--footer-border-gradient);
 }
 
 #background-footer {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url("/src/assets/images/footer-background.png");
-    background-color: rgba(15, 16, 18, 1);
+    background-image: url("/src/assets/images/footer-background.webp");
+    background-color: var(--container-background-color);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0% 60%;
