--- a/src/components/OngletMenu/OngletMenu.css
+++ b/src/components/OngletMenu/OngletMenu.css
@@ -2,7 +2,7 @@
     font-size: var(--onglet-menu-font-size);
     font-weight: var(--onglet-menu-font-wheight);
     color: var(--main-font-color);
-    text-shadow: var(--onglet-menu-text-shadow);
+    /* text-shadow: var(--onglet-menu-text-shadow); */
 }
 
 #liste-menu {
