--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,6 +1,6 @@
 * {
     padding: 0;
-    margin: auto;
+    margin: 0;
     box-sizing: border-box;
     border: 0;
 }
@@ -24,14 +24,14 @@
 :root {
     --main-font-color: #ffffff;
     --main-font-family: "Oppossum", sans-serif;
-    --main-font-size: 14px;
+    --main-font-size: 12px;
 
     --title-font-family: "Xirod";
     --title-font-wheight: 400;
 
     --texte-flashy-font-family: "Xirod", sans-serif;
     --texte-flashy-font-wheight: 600;
-    --texte-flashy-font-size: 1.2em;
+    --texte-flashy-font-size: 1em;
     --texte-flashy-text-shadow: var(--texte-flashy-text-shadow-size) var(--texte-flashy-text-shadow-size) 0 rgba(var(--shadow-color), 1),
         calc(var(--texte-flashy-text-shadow-size) * -1) var(--texte-flashy-text-shadow-size) 0 rgba(var(--shadow-color), 1),
         calc(var(--texte-flashy-text-shadow-size) * -1) calc(var(--texte-flashy-text-shadow-size) * -1) 0 rgba(var(--shadow-color), 1),
@@ -53,7 +53,8 @@
     --shadow-color-midrange: rgba(var(--shadow-color), 0.35);
 
     --menu-background-color: rgba(0, 0, 0, 0.8);
-    --container-background-color: rgba(15, 30, 35, 1);
+    --accueil-container-background-color: rgba(15, 30, 35, 1);
+    --vue-container-background-color: rgba(15, 30, 35, 0.7);
 
     --bouton-menu-circulaire-transition: transform 0.7s, scale 0.3s;
     --bouton-menu-circulaire-pointer-event: none;
@@ -83,9 +84,14 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     font-family: var(--title-font-family);
     font-weight: var(--title-font-wheight);
+}
+
+h3 {
+    font-size: 1.2em;
 }
 
 /* suppression du style par défaut */
@@ -164,6 +170,10 @@ a:visited {
     position: fixed;
 }
 
+.app {
+    min-height: 100vh;
+}
+
 /* Media Queries */
 
 @media (width >=768px) {
@@ -173,9 +183,9 @@ a:visited {
     }
 }
 
-@media (width >=1024px) {
+@media (width >=1440px) {
     body {
-        font-size: calc(var(--main-font-size) + 6px);
+        font-size: calc(var(--main-font-size) + 8px);
         /* Desktop */
     }
 }
