--- a/src/components/AccueilContainer/AccueilContainer.css
+++ b/src/components/AccueilContainer/AccueilContainer.css
@@ -1,13 +1,14 @@
 .accueil-container {
-    background-color: var(--container-background-color);
+    background-color: var(--accueil-container-background-color);
     height: 100%;
     width: 100%;
-    padding: 1rem;
+    padding: 1em;
 }
 
 .accueil-container h1 {
     margin: 0 0 1em 0;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .border-accueil-container {
