--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,7 @@
     width: 100vw;
     min-height: fit-content;
     padding: 2em 0 2em 0;
+    margin-top: 2em;
 }
 
 #bordure-footer {
@@ -17,7 +18,7 @@
     height: 100%;
     z-index: -1;
     background-image: url("/src/assets/images/footer-background.webp");
-    background-color: var(--container-background-color);
+    background-color: var(--accueil-container-background-color);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0% 60%;
