--- a/src/components/AccueilContainer/AccueilContainer.css
+++ b/src/components/AccueilContainer/AccueilContainer.css
@@ -1,26 +1,10 @@
 .accueil-container {
-    background-color: var(--accueil-container-background-color);
-    height: 100%;
+    background: url("/src/assets/images/fondcontainer.png");
+    overflow: hidden;
+    border: 0.2em solid rgba(0, 190, 210, 1);
+}
+
+.accueil-container img {
     width: 100%;
-    padding: 1em;
-}
 
-.accueil-container h1 {
-    margin: 0 0 1em 0;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.border-accueil-container {
-    content: "";
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-    width: calc(100% + 5px);
-    height: calc(100% + 5px);
-    background-image: linear-gradient(to right bottom,
-            rgb(var(--shadow-color)) 0%,
-            transparent 50%,
-            rgb(var(--shadow-color)) 100%);
 }
