--- a/src/components/AccueilProgrammation/AccueilProgrammation.css
+++ b/src/components/AccueilProgrammation/AccueilProgrammation.css
@@ -1,15 +1,43 @@
-#accueil-programmation div {
-    gap: 5vw;
+:root {
+    --marge-grille: 1em;
 }
 
-.container-artefact-accueil {
-    width: 15vw;
-    aspect-ratio: 1/1;
-    overflow: hidden;
+#accueil-programmation {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 8fr 2fr 4fr 4fr 2fr 8fr;
+    width: 60vw;
+    height: 40vw;
+    margin: auto;
+    margin-bottom: var(--marge-grille);
 }
 
-.artefact-accueil {
-    width: 100%;
-    transform: translateY(-50%);
-    top: 50%;
+#artiste0 {
+    grid-area: 1 / 1 / 3 / 3;
+    width: calc(100% - var(--marge-grille));
+    height: calc(100% - var(--marge-grille));
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 75% 80%, 50% 100%, 0 100%);
+}
+
+#artiste1 {
+    grid-area: 1 / 3 / 2 / 7;
+    height: calc(100% - var(--marge-grille));
+}
+
+#artiste2 {
+    grid-area: 6 / 1 / 7 / 3;
+}
+
+#artiste3 {
+    width: calc(100% - var(--marge-grille));
+    margin-left: var(--marge-grille);
+    grid-area: -1 / -1 / -3/ -3;
+    clip-path: polygon(25% 20%, 50% 0, 100% 0, 100% 100%, 0 100%, 0 20%);
+}
+
+#teaser {
+    grid-area: 2 / 1 / span 4 / span 4;
+    height: calc(100% - var(--marge-grille));
+    clip-path: polygon(0 20%, 25% 20%, 37.5% 0, 100% 0, 100% 80%, 75% 80%, 62.5% 100%, 0 100%);
 }
