--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,8 @@
 #footer {
     width: 100vw;
     min-height: fit-content;
-    padding: 2em 0 2em 0;
+    padding: 2em;
     margin-top: 2em;
-}
-
-#bordure-footer {
-    width: 100vw;
-    height: 2em;
-    z-index: 0;
-    top: -1em;
-    background: var(--footer-border-gradient);
-}
-
-#background-footer {
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("/src/assets/images/footer-background.webp");
-    background-color: var(--accueil-container-background-color);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 0% 60%;
-    filter: brightness(50%);
 }
 
 #footer h2 {
@@ -30,14 +10,9 @@
     margin: 1.5em;
 }
 
-#social-footer,
-#acces-footer {
-    height: 100%;
-}
-
-#social-footer a {
-    font-size: 1.5em;
+#social-footer img {
     margin: 0.5em;
+    height: 2em;
 }
 
 #map-acces-footer {
