--- a/src/components/AccueilProgrammation/AccueilProgrammation.css
+++ b/src/components/AccueilProgrammation/AccueilProgrammation.css
@@ -1,43 +1,46 @@
 :root {
-    --marge-grille: 1em;
+    --marge-grille: 2em;
 }
 
-#accueil-programmation {
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 8fr 2fr 4fr 4fr 2fr 8fr;
+#accueil-programmation-grille {
+    grid-template-columns: 3fr 1fr 3fr 1fr;
+    grid-template-rows: 8fr 2fr 6fr 2fr 8fr;
     width: 60vw;
     height: 40vw;
     margin: auto;
+    margin-top: var(--marge-grille);
     margin-bottom: var(--marge-grille);
 }
 
-#artiste0 {
+#accueil-programmation-grille div:nth-child(1) {
     grid-area: 1 / 1 / 3 / 3;
-    width: calc(100% - var(--marge-grille));
-    height: calc(100% - var(--marge-grille));
     clip-path: polygon(0 0, 100% 0, 100% 80%, 75% 80%, 50% 100%, 0 100%);
-}
-
-#artiste1 {
-    grid-area: 1 / 3 / 2 / 7;
+    width: calc(100% - var(--marge-grille));
     height: calc(100% - var(--marge-grille));
 }
 
-#artiste2 {
-    grid-area: 6 / 1 / 7 / 3;
+#accueil-programmation-grille div:nth-child(2) {
+    grid-area: 1 / 3 / 2 / 5;
+    height: calc(100% - var(--marge-grille));
 }
 
-#artiste3 {
-    width: calc(100% - var(--marge-grille));
-    margin-left: var(--marge-grille);
-    grid-area: -1 / -1 / -3/ -3;
+#accueil-programmation-grille div:nth-child(3) {
+    grid-area: 5 / 1 / 6 / 3;
+}
+
+#accueil-programmation-grille div:nth-child(4) {
+    grid-area: 4 / 3/ 6/ 5;
     clip-path: polygon(25% 20%, 50% 0, 100% 0, 100% 100%, 0 100%, 0 20%);
+    margin-left: var(--marge-grille);
+    width: calc(100% - var(--marge-grille));
 }
 
 #teaser {
-    grid-area: 2 / 1 / span 4 / span 4;
-    height: calc(100% - var(--marge-grille));
+    grid-area: 2 / 1 / 5 / 5;
     clip-path: polygon(0 20%, 25% 20%, 37.5% 0, 100% 0, 100% 80%, 75% 80%, 62.5% 100%, 0 100%);
+    height: calc(100% - var(--marge-grille));
+}
+
+#teaser video {
+    width: 100%;
 }
