--- a/src/components/VueContainer/VueContainer.css
+++ b/src/components/VueContainer/VueContainer.css
@@ -10,6 +10,18 @@
     text-decoration: underline;
 }
 
+.vue-container div h3 {
+    margin-bottom: 1em;
+}
+
+.vue-container div {
+    margin: 1.5em 0 1.5em 0;
+}
+
+.vue-container div p::first-letter {
+    font-size: 1.2em;
+}
+
 .vue-container div div {
     margin-left: 2em;
 }
