--- a/src/components/AccueilProgrammation/AccueilProgrammation.css
+++ b/src/components/AccueilProgrammation/AccueilProgrammation.css
@@ -3,44 +3,30 @@
 }
 
 #accueil-programmation-grille {
-    grid-template-columns: 3fr 1fr 3fr 1fr;
-    grid-template-rows: 8fr 2fr 8fr 2fr 8fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     width: 60vw;
-    height: 80vw;
+    height: 60vw;
     margin: auto;
     margin-top: var(--marge-grille);
     margin-bottom: var(--marge-grille);
 }
 
 #accueil-programmation-grille div:nth-child(1) {
-    grid-area: 1 / 1 / 3 / 3;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 75% 80%, 50% 100%, 0 100%);
-    width: calc(100% - var(--marge-grille));
-    height: calc(100% - var(--marge-grille));
+    grid-area: 1 / 1 / 2 / 2;
+
 }
 
 #accueil-programmation-grille div:nth-child(2) {
-    grid-area: 1 / 3 / 2 / 5;
-    height: calc(100% - var(--marge-grille));
+    grid-area: 1 / 2 / 2 / 3;
+
 }
 
 #accueil-programmation-grille div:nth-child(3) {
-    grid-area: 5 / 1 / 6 / 3;
+    grid-area: 2 / 1 / 3 / 2;
 }
 
 #accueil-programmation-grille div:nth-child(4) {
-    grid-area: 4 / 3/ 6/ 5;
-    clip-path: polygon(25% 20%, 50% 0, 100% 0, 100% 100%, 0 100%, 0 20%);
-    margin-left: var(--marge-grille);
-    width: calc(100% - var(--marge-grille));
-}
+    grid-area: 2 / 2/ 3/ 3;
 
-#teaser {
-    grid-area: 2 / 1 / 5 / 5;
-    clip-path: polygon(0 20%, 25% 20%, 37.5% 0, 100% 0, 100% 80%, 75% 80%, 62.5% 100%, 0 100%);
-    height: calc(100% - var(--marge-grille));
-}
-
-#teaser video {
-    width: 125%;
 }
