--- a/src/components/AccueilContainer/AccueilContainer.css
+++ b/src/components/AccueilContainer/AccueilContainer.css
@@ -1,9 +1,14 @@
 .accueil-container {
-    overflow: hidden;
-    border: 0.2em solid rgba(0, 190, 210, 1);
-}
-
-.accueil-container img {
-    width: 100%;
-
+    border: 0.1em solid rgba(250, 250, 250, 1);
+    /* border-radius: 0.5em; */
+    width: 50%;
+    height: 50%;
+    box-shadow:
+        0 0 8px #fff,
+        inset 0 0 8px #fff,
+        0 0 16px rgb(189, 0, 255),
+        inset 0 0 16px rgb(189, 0, 255),
+        0 0 32px rgb(189, 0, 255),
+        inset 0 0 32px rgb(189, 0, 255);
+    ;
 }
