--- a/src/components/AccueilProgrammation/AccueilProgrammation.css
+++ b/src/components/AccueilProgrammation/AccueilProgrammation.css
@@ -5,28 +5,31 @@
 #accueil-programmation-grille {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    width: 60vw;
-    height: 60vw;
+    width: 50vw;
+    height: 50vw;
     margin: auto;
     margin-top: var(--marge-grille);
     margin-bottom: var(--marge-grille);
-}
 
-#accueil-programmation-grille div:nth-child(1) {
-    grid-area: 1 / 1 / 2 / 2;
+    div {
+        aspect-ratio: 1/1;
+        justify-self: center;
+        align-self: center;
+    }
 
-}
+    div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
 
-#accueil-programmation-grille div:nth-child(2) {
-    grid-area: 1 / 2 / 2 / 3;
+    div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
 
-}
+    div:nth-child(3) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
 
-#accueil-programmation-grille div:nth-child(3) {
-    grid-area: 2 / 1 / 3 / 2;
-}
-
-#accueil-programmation-grille div:nth-child(4) {
-    grid-area: 2 / 2/ 3/ 3;
-
+    div:nth-child(4) {
+        grid-area: 2 / 2/ 3/ 3;
+    }
 }
