finalisation comportement scroll

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -53,7 +53,6 @@
         0 0 2em rgba(var(--shadow-color), 1),
         0 0 4em rgba(var(--shadow-color), 1);
 
-    --footer-border-gradient: linear-gradient(0deg, rgba(var(--shadow-color), 0) 0%, rgba(var(--shadow-color), 1) 40%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%)
 }
 
 body {
@@ -72,6 +71,7 @@ body {
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.8015581232492998) 0%, rgba(0, 0, 0, 0.6026785714285714) 10%, rgba(0, 0, 0, 0.30015756302521013) 30%, rgba(0, 0, 0, 0) 40%);
 }
 
 h1,
