--- a/src/components/Banniere/Banniere.css
+++ b/src/components/Banniere/Banniere.css
@@ -1,11 +1,11 @@
 #banniere {
-    width: 100%;
-    height: 55vw
+    width: 100vw;
+    height: 100vw
 }
 
 #logo-banniere {
-    width: 40%;
-    top: 8em;
-    left: 30%;
+    width: 60%;
+    top: 5em;
+    left: 20%;
     z-index: 3;
 }
