--- a/src/components/Banniere/Banniere.css
+++ b/src/components/Banniere/Banniere.css
@@ -1,11 +1,18 @@
 #banniere {
     width: 100vw;
-    height: 100vw
+    height: 100vw;
+    gap: 4em;
 }
 
 #logo-banniere {
     width: 60%;
-    top: 5em;
-    left: 20%;
+    z-index: 3;
+    margin-top: 8em;
+    margin-bottom: 5em;
+}
+
+#date-lieu-banniere {
+    font-size: 3em;
+    font-weight: var(--title-font-wheight);
     z-index: 3;
 }
