--- a/src/components/Banniere/Banniere.css
+++ b/src/components/Banniere/Banniere.css
@@ -1,18 +1,28 @@
 #banniere {
     width: 100vw;
-    height: 90vw;
-    gap: 4em;
+    gap: 3em;
 }
 
 #logo-banniere {
-    width: 60%;
+    width: 85%;
     z-index: 3;
-    margin-top: 8em;
-    margin-bottom: 5em;
+    margin-top: 10em;
+    margin-bottom: 4em;
 }
 
 #date-lieu-banniere {
-    font-size: 3em;
+    font-size: 2em;
     font-weight: var(--title-font-wheight);
     z-index: 3;
+}
+
+@media (width >=768px) {
+
+    #banniere {
+        gap: 4em;
+    }
+
+    #date-lieu-banniere {
+        font-size: 3em;
+    }
 }
