--- a/src/components/Portail/Portail.css
+++ b/src/components/Portail/Portail.css
@@ -4,15 +4,15 @@
 
     --portail-faces-color: 0, 190, 210;
     --portail-faces-filtre: brightness(1.1);
-    --portail-face-arriere-degrade: linear-gradient(to bottom, rgba(var(--portail-faces-color), 0.7) 3%, rgba(var(--portail-faces-color), 0.5) 10%, rgba(var(--portail-faces-color), 0.3) 40%, rgba(var(--portail-faces-color), 0) 85%);
+    --portail-face-arriere-degrade: linear-gradient(to bottom, rgba(var(--portail-faces-color), 0.7) 5%, rgba(var(--portail-faces-color), 0.5) 30%, rgba(var(--portail-faces-color), 0.3) 70%, rgba(var(--portail-faces-color), 0) 100%);
     --portail-face-arriere-ombre: 0px -4.5em 1em 0.4em rgba(var(--portail-faces-color), 0.3);
 
-    --portail-face-gauche-degrade: linear-gradient(-150deg, rgb(var(--portail-faces-color), 0.6) 20%, rgba(var(--portail-faces-color), 0.4) 31%, rgba(var(--portail-faces-color), 0.2) 51%, rgba(var(--portail-faces-color), 0)90%);
-    --portail-face-droite-degrade: linear-gradient(150deg, rgb(var(--portail-faces-color), 0.6) 20%, rgba(var(--portail-faces-color), 0.4) 31%, rgba(var(--portail-faces-color), 0.2) 51%, rgba(var(--portail-faces-color), 0)90%);
+    --portail-face-gauche-degrade: linear-gradient(-150deg, rgb(var(--portail-faces-color), 0.6) 25%, rgba(var(--portail-faces-color), 0.4) 40%, rgba(var(--portail-faces-color), 0.2) 70%, rgba(var(--portail-faces-color), 0)90%);
+    --portail-face-droite-degrade: linear-gradient(150deg, rgb(var(--portail-faces-color), 0.6) 25%, rgba(var(--portail-faces-color), 0.4) 40%, rgba(var(--portail-faces-color), 0.2) 70%, rgba(var(--portail-faces-color), 0)90%);
 }
 
 #portail {
-    width: 50%;
+    width: 70%;
 }
 
 #face-dessus-ombre {
@@ -29,7 +29,7 @@
 #face-arriere {
     width: 60%;
     left: 20%;
-    aspect-ratio: 1/1.5;
+    aspect-ratio: 1/1.3;
     z-index: -1;
     background: var(--portail-face-arriere-degrade);
     box-shadow: var(--portail-face-arriere-ombre);
@@ -54,4 +54,10 @@
     right: 0;
     background: var(--portail-face-droite-degrade);
 
+}
+
+@media (width >=768px) {
+    #portail {
+        width: 50%;
+    }
 }
