--- a/src/components/AccueilInfo/AccueilInfo.css
+++ b/src/components/AccueilInfo/AccueilInfo.css
@@ -1,4 +1,11 @@
 #accueil-info {
-    width: 50%;
+    width: 80%;
     gap: 1em
+}
+
+@media (width >=810px) {
+    #accueil-info {
+        width: 50%;
+        gap: 2em
+    }
 }
