--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -9,14 +9,14 @@
 
 /* Media Queries */
 
-@media (width >=768px) {
+@media (width >=810px) {
     .background {
         width: 120vw;
         /* Tablet */
     }
 }
 
-@media (width >=1440px) {
+@media (width > 1232px) {
     .background {
         width: 100vw;
         /* Desktop */
