--- a/src/components/AccueilContainer/AccueilContainer.css
+++ b/src/components/AccueilContainer/AccueilContainer.css
@@ -1,11 +1,11 @@
 .accueil-container {
-    border: 0.1em solid rgba(250, 250, 250, 1);
+    border: 0.1em solid var(--white);
     /* border-radius: 0.5em; */
     width: 50%;
     height: 50%;
     box-shadow:
-        0 0 8px #fff,
-        inset 0 0 8px #fff,
+        0 0 8px var(--white),
+        inset 0 0 8px var(--white),
         0 0 16px rgb(189, 0, 255),
         inset 0 0 16px rgb(189, 0, 255),
         0 0 32px rgb(189, 0, 255),
