--- a/src/components/Bouton/Bouton.css
+++ b/src/components/Bouton/Bouton.css
@@ -1,6 +1,6 @@
 .bouton {
     padding: 0.5em 1em;
-    color: rgba(var(--shadow-color), 1);
+    color: rgba(var(--blue-shadow-color), 1);
     text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
@@ -9,7 +9,7 @@
 }
 
 .bouton:hover {
-    background: rgba(var(--shadow-color), 1);
+    background: rgba(var(--blue-shadow-color), 1);
     color: var(--main-font-color);
     border-radius: 0.25em;
     box-shadow: var(--bouton-box-shadow);
@@ -20,7 +20,7 @@
     left: -100%;
     width: 100%;
     height: 0.1em;
-    background: linear-gradient(90deg, transparent, rgba(var(--shadow-color), 1));
+    background: linear-gradient(90deg, transparent, rgba(var(--blue-shadow-color), 1));
     animation: btn-anim1 1s linear infinite;
 }
 
@@ -40,7 +40,7 @@
     right: 0;
     width: 0.1em;
     height: 100%;
-    background: linear-gradient(180deg, transparent, rgba(var(--shadow-color), 1));
+    background: linear-gradient(180deg, transparent, rgba(var(--blue-shadow-color), 1));
     animation: btn-anim2 1s linear infinite;
     animation-delay: .25s
 }
@@ -62,7 +62,7 @@
     right: -100%;
     width: 100%;
     height: 0.1em;
-    background: linear-gradient(270deg, transparent, rgba(var(--shadow-color), 1));
+    background: linear-gradient(270deg, transparent, rgba(var(--blue-shadow-color), 1));
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s
 }
@@ -83,7 +83,7 @@
     left: 0;
     width: 0.1em;
     height: 100%;
-    background: linear-gradient(360deg, transparent, rgba(var(--shadow-color), 1));
+    background: linear-gradient(360deg, transparent, rgba(var(--blue-shadow-color), 1));
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
 }
