--- a/src/components/AccueilPartenaire/AccueilPartenaires.css
+++ b/src/components/AccueilPartenaire/AccueilPartenaires.css
@@ -1,13 +1,36 @@
 #accueil-partenaires {
-    width: 60%;
+    width: 80%;
     gap: 2em;
 }
 
 #ligne-partenaire {
     width: 100%;
     overflow: hidden;
+    gap: 3vw;
+    mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
+    /* dégradé de transparence */
+    mask-size: 100% 100%;
+    /* taille du dégradé */
+    mask-repeat: no-repeat;
+    /* répétition du dégradé */
 }
 
 .logo-partenaire-accueil {
-    width: 10vw;
+    aspect-ratio: 1/1;
+    transition: all 0.5s ease-in-out;
+}
+
+.logo-centre {
+    width: 30%;
+
+}
+
+.logo-voisin-1 {
+    width: 15%;
+    opacity: 0.5;
+}
+
+.logo-voisin-2 {
+    width: 10%;
+    opacity: 0.3;
 }
