--- a/src/components/AccueilPartenaire/AccueilPartenaires.css
+++ b/src/components/AccueilPartenaire/AccueilPartenaires.css
@@ -1,36 +1,80 @@
 #accueil-partenaires {
     width: 80%;
-    gap: 2em;
 }
 
 #ligne-partenaire {
     width: 100%;
+    height: 20em;
     overflow: hidden;
-    gap: 3vw;
+    gap: 3em;
     mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 20%, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
-    /* dégradé de transparence */
     mask-size: 100% 100%;
-    /* taille du dégradé */
     mask-repeat: no-repeat;
-    /* répétition du dégradé */
 }
 
 .logo-partenaire-accueil {
     aspect-ratio: 1/1;
-    transition: all 0.5s ease-in-out;
+    max-height: 100%;
+    transition: transform 1.5s ease-in-out, opacity 1.5s ease-in-out, left 1.5s ease-in-out, width 1.5s ease-in-out;
+    position: absolute;
+    left: 0;
 }
 
 .logo-centre {
-    width: 30%;
-
+    width: 20%;
+    opacity: 1;
+    left: 50%;
+    /* Centré horizontalement */
+    transform: translateX(-50%);
 }
 
-.logo-voisin-1 {
-    width: 15%;
-    opacity: 0.5;
+.logo-voisin-2,
+.logo-voisin-4 {
+    width: 12%;
+    opacity: 0.8;
 }
 
 .logo-voisin-2 {
-    width: 10%;
-    opacity: 0.3;
+    left: 30%;
+    transform: translateX(-50%);
+}
+
+.logo-voisin-4 {
+    left: 70%;
+    transform: translateX(-50%);
+}
+
+.logo-voisin-1,
+.logo-voisin-5 {
+    width: 8%;
+    opacity: 0.4;
+}
+
+.logo-voisin-1 {
+    left: 10%;
+    transform: translateX(50%);
+}
+
+.logo-voisin-5 {
+    left: 90%;
+    transform: translateX(-150%);
+}
+
+.logo-hidden-gauche,
+.logo-hidden-droite {
+    width: 0;
+    opacity: 0;
+}
+
+.logo-hidden-gauche {
+    left: -10%;
+}
+
+.logo-hidden-droite {
+    left: 110%;
+}
+
+.hidden-logo {
+    width: 0;
+    opacity: 0;
 }
