--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,20 +1,20 @@
 #footer {
     width: 100vw;
     min-height: fit-content;
-    padding: 2em;
-    margin-top: 2em;
-}
+    padding: 0 0 2em 0;
+    text-align: center;
 
-#footer h2 {
-    font-size: 1em;
-    margin: 1.5em;
-}
+    >div {
+        width: calc(100% / 3);
+    }
 
-#social-footer img {
-    margin: 0.5em;
-    height: 2em;
-}
+    h2 {
+        font-size: 1.1em;
+        margin: 1.5em;
+    }
 
-#map-acces-footer {
-    width: 15vw;
+    img {
+        margin: 0 1em 0 1em;
+        height: 2em;
+    }
 }
