--- a/src/components/Bouton/Bouton.css
+++ b/src/components/Bouton/Bouton.css
@@ -1,100 +1,17 @@
 .bouton {
-    padding: 0.5em 1em;
-    color: rgba(var(--blue-shadow-color), 1);
+    padding: 1.2em 1.5em;
     text-transform: uppercase;
     overflow: hidden;
-    transition: .5s;
-    margin: 1em 0 0 0;
+    border: var(--purple-box-border);
+    box-shadow: var(--purple-box-shadow);
+    margin: 2em 0 0 0;
     font-size: 0.8em;
 }
 
 .bouton:hover {
-    background: rgba(var(--blue-shadow-color), 1);
+    background: rgba(var(--purple-shadow-color), 1);
     color: var(--main-font-color);
     border-radius: 0.25em;
-    box-shadow: var(--bouton-box-shadow);
-}
-
-.bouton span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 0.1em;
-    background: linear-gradient(90deg, transparent, rgba(var(--blue-shadow-color), 1));
-    animation: btn-anim1 1s linear infinite;
-}
-
-@keyframes btn-anim1 {
-    0% {
-        left: -100%;
-    }
-
-    50%,
-    100% {
-        left: 100%;
-    }
-}
-
-.bouton span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 0.1em;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, rgba(var(--blue-shadow-color), 1));
-    animation: btn-anim2 1s linear infinite;
-    animation-delay: .25s
-}
-
-
-@keyframes btn-anim2 {
-    0% {
-        top: -100%;
-    }
-
-    50%,
-    100% {
-        top: 100%;
-    }
-}
-
-.bouton span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 0.1em;
-    background: linear-gradient(270deg, transparent, rgba(var(--blue-shadow-color), 1));
-    animation: btn-anim3 1s linear infinite;
-    animation-delay: .5s
-}
-
-@keyframes btn-anim3 {
-    0% {
-        right: -100%;
-    }
-
-    50%,
-    100% {
-        right: 100%;
-    }
-}
-
-.bouton span:nth-child(4) {
-    bottom: -100%;
-    left: 0;
-    width: 0.1em;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, rgba(var(--blue-shadow-color), 1));
-    animation: btn-anim4 1s linear infinite;
-    animation-delay: .75s
-}
-
-@keyframes btn-anim4 {
-    0% {
-        bottom: -100%;
-    }
-
-    50%,
-    100% {
-        bottom: 100%;
-    }
+    font-weight: var(--title-font-wheight);
+    animation: flicker var(--animation-parametre), change-border-color var(--animation-parametre);
 }
