--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -4,5 +4,13 @@
     width: 100vw;
     background: var(--menu-background-color);
     z-index: 10;
-    transition: all 0.5s;
+    transition: all 1s ease-in-out;
+
+    a {
+        transition: font-size 0.3s ease-in-out;
+    }
+
+    a:hover {
+        font-size: 2.5em;
+    }
 }
