--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -77,7 +77,7 @@ h3 {
 }
 
 h1 {
-    font-size: 2.5em;
+    font-size: 2.8em;
 }
 
 h2 {
@@ -109,7 +109,7 @@ p {
 }
 
 strong {
-    font-weight: 700;
+    font-weight: var(--title-font-wheight);
     font-size: 1.1em;
 }
 
