--- a/src/components/VueContainer/VueContainer.css
+++ b/src/components/VueContainer/VueContainer.css
@@ -1,31 +1,25 @@
-:root {
-    --vue-container-background-color: rgba(15, 30, 35, 0.7);
-}
-
 .vue-container {
-    /* background-color: var(--vue-container-background-color); */
-    height: 100%;
     width: 95%;
     padding: 1em;
-}
 
-.vue-container h2 {
-    margin-bottom: 2em;
-    text-decoration: underline;
-}
+    h2 {
+        margin: 0em 0 1em 0;
+    }
 
-.vue-container div h3 {
-    margin-bottom: 1em;
-}
+    div {
+        margin: 0 0 1em 0;
 
-.vue-container div {
-    margin: 1.5em 0 1.5em 0;
-}
+        div {
+            margin-left: 2em;
+        }
+    }
 
-.vue-container div p::first-letter {
-    font-size: 1.2em;
-}
+    p {
+        margin: 0 0 4em 0;
+    }
 
-.vue-container div div {
-    margin-left: 2em;
+    div p::first-letter {
+        font-size: 1.2em;
+    }
+
 }
